find user by criteria
