# src/main/java/com/apollogix/demo/web/rest/UserApiDelegateApiV1Impl.java
@@ -1,12 +1,16 @@
 package com.apollogix.demo.web.rest;
 
 import com.apollogix.demo.config.AuthoritiesConstants;
-import com.apollogix.demo.mapper.UserResponseMapper;
+import com.apollogix.demo.mapper.UserResponseDTOMapper;
 import com.apollogix.demo.service.UserService;
+import com.apollogix.demo.util.RestResponseUtil;
 import com.apollogix.web.rest.api.UserV1ApiDelegate;
 import com.apollogix.web.rest.model.RoleAssignmentRequest;
+import com.apollogix.web.rest.model.UserCriteria;
 import com.apollogix.web.rest.model.UserResponseDTO;
+import com.apollogix.web.rest.model.UserResponsePaginatedDTO;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.annotation.Secured;
 import org.springframework.stereotype.Component;
@@ -15,9 +19,9 @@ import org.springframework.stereotype.Component;
 @RequiredArgsConstructor
 public class UserApiDelegateApiV1Impl implements UserV1ApiDelegate {
     private final UserService userService;
-    private final UserResponseMapper userResponseMapper;
+    private final UserResponseDTOMapper userResponseDTOMapper;
 
-    
+
     @Secured({
             AuthoritiesConstants.TEACHER
     })
@@ -25,7 +29,25 @@ public class UserApiDelegateApiV1Impl implements UserV1ApiDelegate {
     public ResponseEntity<UserResponseDTO> assignRoleUsingPost(RoleAssignmentRequest roleAssignmentRequest) {
         var userDetails = userService.assignRole(roleAssignmentRequest);
         return ResponseEntity.ok(
-                userResponseMapper.toUserResponse(userDetails)
+                userResponseDTOMapper.toUserResponse(userDetails)
         );
     }
+
+
+    @Secured({
+            AuthoritiesConstants.TEACHER
+    })
+    @Override
+    public ResponseEntity<UserResponsePaginatedDTO> getUserByCriteria(UserCriteria criteria, Pageable pageable) {
+        var userResponseDTOS = userService.findByCriteria(criteria, pageable)
+                .map(userResponseDTOMapper::toUserResponse);
+        return ResponseEntity.ok(
+                UserResponsePaginatedDTO.builder()
+                        .payload(userResponseDTOS.getContent())
+                        .pagination(RestResponseUtil.fromPage(userResponseDTOS))
+                        .build()
+        );
+    }
+
+
 }
